Fixes align-items on sidebar

--- a/style.css
+++ b/style.css
@@ -93,7 +93,6 @@ body{
     width: 60px;
     height: calc(100vh - 80px);
     padding: 10px;
-    align-items: center;
 }
 
 .sidebar-container img{
@@ -106,7 +105,7 @@ body{
     display: flex;
     height: 40px;
     width: auto;
-    margin: 0 0px 20px 0;
+    margin: 0 10px 20px 0;
     align-items: flex-start;
 }
 
